fix excerpt not showing on mobile

--- a/assets/css/video.css
+++ b/assets/css/video.css
@@ -145,8 +145,6 @@
 .hero-video {
  max-height: 80vh;
  overflow: hidden;
- height: 0;
- padding-bottom: calc(700 / 1920 * 100%);
  margin-bottom: 7maj;
  border-radius: 1.5maj;
  box-shadow: var(--big-shadow);
@@ -161,10 +159,14 @@
   margin-bottom: 4maj;
  }
 
+ .preview-container {
+  height: 0;
+  padding-bottom: calc(700 / 1920 * 100%);
+ }
+
  .preview {
   width: 100%;
   height: 100%;
-  position: absolute;
   object-fit: cover;
   object-position: center;
   border-radius: 1.5maj;
